syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

import "Protos/sharedDefinitions.proto";

option csharp_namespace = "DeviceManager.Core.Proto";

service DeviceGrpcService {
  rpc GetAllDevices (GetAllDevicesRequest) returns (stream DeviceResourceExtended);
  rpc GetDevice (GetDeviceRequest) returns (DeviceResourceExtended);

  rpc CreateDevice (CreateDeviceRequest) returns (DeviceResource);
  rpc UpdateDevice (UpdateDeviceRequest) returns (DeviceResource);
  rpc DeleteDevice (DeleteDeviceRequest) returns (google.protobuf.Empty);

  rpc Ping (PingRequest) returns (google.protobuf.Empty);
  rpc GenerateToken (GenerateTokenRequest) returns (GenerateTokenResponse);
  rpc GetDeviceByToken (GetDeviceByTokenRequest) returns (DeviceResourceExtended);
}

message GetAllDevicesRequest {
  bool IncludeLocation = 1;
  bool IncludeSensors = 2;
  // (optional) filter by user ID
  google.protobuf.StringValue UserId = 3;
}

message GetDeviceRequest {
  int32 Id = 1;

  bool IncludeLocation = 2;
  bool IncludeSensors = 3;

  // (optional) filter by user ID
  google.protobuf.StringValue UserId = 4;
}


message DeleteDeviceRequest {
  int32 Id = 1;
  // (optional) limit access to user - if device does not belong to the user -> action will fail
  google.protobuf.StringValue UserId = 4;
}


message CreateDeviceRequest {
  string Name = 1;
  google.protobuf.StringValue DisplayName = 2;
  bool Online = 3;
  string MacAddress = 4;
  google.protobuf.StringValue Model = 5;
  google.protobuf.StringValue Manufacturer = 6;
  google.protobuf.Int32Value LocationId = 7;
  string UserId = 8;

  // Sensors mounted on the device to be added
  repeated CreateDeviceSensorResource Sensors = 16;
}

message UpdateDeviceRequest {
  int32 Id = 1;

  // fields to update
  google.protobuf.StringValue DisplayName = 3;
  bool Online = 4;
  google.protobuf.StringValue Model = 5;
  google.protobuf.StringValue Manufacturer = 6;
  google.protobuf.Int32Value LocationId = 7;

  // userId to limit access to resource
  google.protobuf.StringValue UserId = 16;
}

message PingRequest {
  int32 Id = 1;
}

message GenerateTokenRequest {
  int32 Id = 1;

  // userId to limit access to resource
  google.protobuf.StringValue UserId = 2;
}

message GenerateTokenResponse {
  int32 Id = 1;
  string Token = 2;
}

message GetDeviceByTokenRequest {
  string Token = 1;
}


