syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

import "Protos/sharedDefinitions.proto";

option csharp_namespace = "DeviceManager.Core.Proto";

service SensorTypeGrpcService {
  rpc GetAllSensorTypes (GenericGetManyRequest) returns (GetAllSensorTypesResponse);
  rpc GetSensorType (GenericGetRequest) returns (SensorTypeResource);

  rpc CreateSensorType (CreateSensorTypeRequest) returns (SensorTypeResource);
  rpc UpdateSensorType (UpdateSensorTypeRequest) returns (SensorTypeResource);
  rpc DeleteSensorType (GenericDeleteRequest) returns (google.protobuf.Empty);
}

message GetAllSensorTypesResponse {
  repeated SensorTypeResource SensorTypes = 1;
  PaginationMetaData MetaData = 2;
}

message CreateSensorTypeRequest {
  string Name = 1;
  string Unit = 2;
  string UnitShort = 3;
  google.protobuf.StringValue UnitSymbol = 4;
  bool IsDiscrete = 5;
  bool IsSummable = 6;
}

message UpdateSensorTypeRequest {
  int32 Id = 1;
  string Name = 2;
  string Unit = 3;
  string UnitShort = 4;
  google.protobuf.StringValue UnitSymbol = 5;
  bool IsDiscrete = 6;
  bool IsSummable = 7;
}
